Version 8.5.0
* [DXFC-268] Fixed a bug with AccessViolationException when the user called Dispose of the subscription after Dispose of the connection. 

Version 8.4.1
* [DXFC-264] Added assembly and deployment of XML documentation
  Now dxf_api.xml and dxf_native.xml files come inside zip bundle. You can use them to get API documentation from the IDE.
* [DXFC-261] Fixed a bug related to leaking socket handles

Version 8.4.0
* [DXFC-258] Fixed a bug with the impossibility of receiving candledata when changing the order of candle symbol attributes
* [DXFC-260] Added the ability to retrieve TnS data from CandleWebService
  - Added the `TimeAndSaleDataConnection` class with method
  `Task<Dictionary<string, List<IDxTimeAndSale>>> GetTimeAndSaleData(List<string> symbols, DateTime fromTime, DateTime toTime, CancellationToken cancellationToken)`
  that retrieves candles by symbols and start\stop DateTime. See documentation. 
  - Add the `dxf_tns_data_retrieving_sample` that demonstrates how to use `TimeAndSaleDataConnection`
  It is possible to subscribe to regional TnS by specifying, for example, the AAPL&Q symbol. 
  In this case, the service will return composite (Scope = Composite !) TnS with the TimeAndSale (not TimeAndSale&Q) record type and the AAPL&Q symbol (like a candle)
  For such a case, the `Normalized` method has been added for the TimeAndSale, Quote, Summary events, which will return a normalized (Regional) copy of the event. See example and documentation. 

Version 8.3.0
* [DXFC-254] The amount of memory used to store the symbols required for a subscription has been reduced by several times.
* [DXFC-238] Added the ability to set PriceLevelBook symbol or orders sources. Added the new methods:
  - `IDxPriceLevelBook.SetSymbol(string newSymbol)`
  - `IDxPriceLevelBook.SetSources(string[] newSources)`
  - `IDxPriceLevelBook.AddSymbols(params CandleSymbol[] symbols)`
  
  See documentation.
* [DXFC-255] Added a simple way to get data from CandleWebService.