@@ -1,5 +1,6 @@
 Version 8.5.0
-* [DXFC-268] Fixed a bug with AccessViolationException when the user called Dispose of the subscription after Dispose of the connection. 
+* [DXFC-268] Fixed a bug with AccessViolationException when the user called Dispose of the subscription after Dispose of the connection.
+* [DXFC-267] Fixed a bug with possible call of callbacks/delegates from the native library when the memory of subscriptions/connections objects is cleared by the GC 
 
 Version 8.4.1
 * [DXFC-264] Added assembly and deployment of XML documentation
